# pdl

./: .gitignore  LICENSE  MANIFEST.in  Makefile  Makefile.bak  README.md  clean.sh  setup.cfg  setup.py  tox.ini
scripts/Mac/: install.sh  run.sh  uninstall.sh
scripts/Windows/: install
src/peopledatalabs/: __init__.py  _version.py  helper.py  pdl.py
src/peopledatalabs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_module1.py
